<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#24292E"
    android:fitsSystemWindows="true"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.jeansr.androideditor.ImageButtonWithTxt
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:buttonSrc="@drawable/ic_settings"
            app:buttonText="@string/Settings"/>

        <com.jeansr.androideditor.ImageButtonWithTxt
            android:id="@+id/btnGitHubLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:buttonSrc="@drawable/ic_github_invertocat_white"
            app:buttonText="@string/Githubconect"
            android:background="@drawable/bg_input_dark"
            android:backgroundTint="#090909"
            />

        <com.jeansr.androideditor.ImageButtonWithTxt
            android:id="@+id/btnExtensions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:buttonSrc="@drawable/ic_extensions"
            app:buttonText="@string/extensions"
            />

        <com.jeansr.androideditor.ImageButtonWithTxt
            android:id="@+id/btnShortcuts"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:buttonSrc="@drawable/ic_star"
            app:buttonText="@string/shortcuts"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#24292E"
            app:subtitle="@string/My_projects"
            android:layout_marginBottom="5dp"
            app:subtitleTextColor="#B0BEC5"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerProjects"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:padding="8dp"
                    android:paddingBottom="88dp" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btnNuevoProyecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:backgroundTint="#6200EE"

                android:textColor="@android:color/white"
                app:icon="@android:drawable/ic_input_add"
                app:iconTint="@android:color/white" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>